--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ p {
   color: red;
 }
 @font-face {
-  font-family: myFirstFont;
+  font-family: <p>;
   src: url(sansation_bold.woff);
   font-weight: bold;
 }
