--- a/style.css
+++ b/style.css
@@ -3,10 +3,7 @@ color: green;
 }
 h1 {
   Color: purple;
-
-	font-size: 64px;
-	margin-bottom: -25px;
 }
 h2 { 
-color: purple;
+color: light blue;
 }
