--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ body {
     background-color: gray;
     color: white;
 }   
-#content-contac {  
+#content-contact {  
       text-align: center;
 }
