--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ h1 {
     font-size: 55px;
 	margin-bottom: -20px;
 }
+h2 {
+	font-size: 25px;
+	margin-bottom: -8px;
+}
 h3 {
     letter-spacing: 5px;
 }
